--- a/blogpost.html
+++ b/blogpost.html
@@ -21,5 +21,8 @@
                 <p>Suscribete y dale like a nuestra pagina</p>
             </div>
         </div>
+        <footer class="footer">
+            <p>Hecho con mucho amor en Platzi</p>
+        </footer>
     </body>
 </html>
